--- a/web.config
+++ b/web.config
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="Default.htm" />
-                <add value="index.php" />
-                <add value="Default.asp" />
-                <add value="index.htm" />
-                <add value="index.html" />
-                <add value="iisstart.htm" />
-            </files>
-        </defaultDocument>
+        <security>
+            <requestFiltering>
+                <hiddenSegments>
+                    <add segment="users.json" />
+                    <add segment="history.json" />
+                </hiddenSegments>
+            </requestFiltering>
+        </security>
     </system.webServer>
 </configuration>
